Changed clearfix and container to display as block instead of table. Specified that inputs with type 'submit' or 'reset', must have the '.button' class to use button styling. Commented out flexbox utilties for now. Set z-indexes for fixed elements such as 'div.mdoal-backdrop' and 'navbar.

--- a/scss/form.scss
+++ b/scss/form.scss
@@ -186,7 +186,7 @@ form div.field {
     &::after {
       content: '';
       clear: both;
-      display: table;
+      display: block;
     }
 
     & > div[class*="default-"], & > div[class*="small-"], 
@@ -301,7 +301,7 @@ div.container-controls {
   &::after {
     content: '';
     clear: both;
-    display: table;
+    display: block;
   }
 
   div[class*="default-"], div[class*="small-"], 
