--- a/scss/utility.scss
+++ b/scss/utility.scss
@@ -69,38 +69,38 @@
 
 /* ====================================================== */
 
-.flex  {
-  display: flex !important;
-  flex-flow: row nowrap;
-}
+// .flex  {
+//   display: flex !important;
+//   flex-flow: row nowrap;
+// }
 
-.flex-left {
-  justify-content: flex-start;
-}
+// .flex-left {
+//   justify-content: flex-start;
+// }
 
-.flex-x-center {
-  justify-content: center;
-}
+// .flex-x-center {
+//   justify-content: center;
+// }
 
-.flex-right {
-  justify-content: flex-end;
-}
+// .flex-right {
+//   justify-content: flex-end;
+// }
 
-.flex-top {
-  align-items: flex-start;
-}
+// .flex-top {
+//   align-items: flex-start;
+// }
 
-.flex-y-center {
-  align-items: center;
-}
+// .flex-y-center {
+//   align-items: center;
+// }
 
-.flex-bottom {
-  align-items: flex-end;
-}
+// .flex-bottom {
+//   align-items: flex-end;
+// }
 
-.flex-stretch {
-  align-items: stretch;
-}
+// .flex-stretch {
+//   align-items: stretch;
+// }
 
 /* ====================================================== */
 
